# dotengine

./: .gitignore  Cargo.toml  README.md  design-skill.md  hypr-ecosystem-skill.md  install.sh  report.md  skill.md
.github/workflows/: release.yml
src/: composer.rs  lib.rs  main.rs  ui.rs
src/application/: cli_plan.rs  component_normalization.rs  design_archetypes.rs  desktop_audit.rs  generation_workflow.rs  healing_workflow.rs  mod.rs  skill_corpus.rs
src/domain/: config_file.rs  design_reference.rs  design_template.rs  error_payload.rs  mod.rs  prompt.rs  system_context.rs
src/infrastructure/: credential_store.rs  gemini_client.rs  hypr_sys.rs  mod.rs  openai_client.rs
src/ports/: ai_service.rs  mod.rs  system_manager.rs
tests/: integration_tests.rs
