[package]
name = "dotengine"
version = "1.0.2"
edition = "2021"
description = "A clean-architecture Hyprland AI Configuration and Self-Healing CLI Agent"

[dependencies]
# Async Runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP & APIs
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Traits & Helpers
async-trait = "0.1.80"

# CLI Parsing
clap = { version = "4.5", features = ["derive"] }

# Error Handling & Logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"

# Encoding/Decoding
base64 = "0.22"
image = { version = "0.24", features = ["png", "jpeg", "bmp", "gif"] }
